Fix text overflowing bug

--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ h2 {
 
 li {
   font-size: 16px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #deleteButton {
   background-color: #75adff;
